<resources>
    <string name="app_name">OpenSourceStats</string>
    <string name="title_details">Details</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_progress">Progress</string>
    <string name="title_activity_auth">Authentication</string>
    <string name="button">Authenticate</string>
    <string name="auth_success_text">Authentication Successful</string>
    <string name="auth_failed_text">Authentication Failed</string>
    <string name="overview_current_week_header">Current Week Overview</string>
    <string name="commit_text">Commits:</string>
    <string name="issue_text">Issues:</string>
    <string name="pull_request_text">Pull Requests:</string>
    <string name="pull_request_review_text">Pull Request Reviews:</string>
    <string name="overview_last_week_header">Last Week Overview</string>
    <string name="to_commit_repos_text">Repositories with Commits</string>
    <string name="to_issue_repos_text">Repositories with Issues</string>
    <string name="to_pull_request_repos_text">Repositories with Pull Requests</string>
    <string name="to_pull_request_review_repos_text">Repositoris with Pull Request Reviews</string>
    <string name="not_implemented">Not Implemented</string>
    <string name="not_set">-</string>
    <string name="progress_week_header">Weekly Progress</string>
    <string name="to_custom_time_span_details_text">Custom Time Span</string>
    <string name="to_current_week_details_text">Current Week</string>
    <string name="to_last_week_details_text">Last Week</string>
    <string name="to_current_month_details_text">Current Month</string>
    <string name="to_last_month_details_text">Last Month</string>
    <string name="weekly_gain">Weekly Gain</string>
    <string name="monthly_gain">Monthly Gain</string>
    <string name="overview_current_month_header">Current Month Overview</string>
    <string name="overview_last_month_header">Last Month Overview</string>
    <string name="created_at_label">Created At:</string>
    <string name="repository_access_private"><![CDATA[<private>]]></string>
    <string name="repository_primary_language_label">Primary Language:</string>
    <string name="repository_languages_label">Languages:</string>
    <string name="no_repos_found_item">No Repositories found for this View</string>
    <string name="no_additional_information">No additional information available</string>
    <string name="keep_on_message_1">Nice Work! Keep it up!</string>
    <string name="keep_on_message_2">Really Impressive! You\'re doing great.</string>
    <string name="keep_on_message_3">Keep up the great work!</string>
    <string name="work_harder_message_1">Not bad, but you have to try harder to beat your old scores.</string>
    <string name="work_harder_message_2">Taking a break?</string>
    <string name="work_harder_message_3">Is it too hard for you?</string>
    <string name="date_range_picker_title">Select a Time Span</string>
    <string name="title_settings">Settings</string>
    <string name="authentication_settings">Auth-Settings</string>
    <string name="back_from_settings">Go Back</string>
    <string name="progress_settings">Progress-View Settings</string>
    <string name="show_progress_graph">Show Graph</string>
    <string name="show_progress_graph_summary">Dertermines if the progress graph is available in the progress view</string>
    <string name="auth_revoke_authentication">Revoke Authentication</string>
    <string name="auth_revoke_authentication_summary">Revokes current GitHub-Authentication</string>
    <string name="auth_restart_authentication">Re-Authenticate</string>
    <string name="auth_restart_authentication_summary">Resets current Authentication and starts a new authentication process</string>
    <string name="auth_check_authentication">Check Authentication</string>
    <string name="auth_check_authentication_summary">Checks if current authentication works as expected</string>
    <string name="check_auth_true">Works as Expected!</string>
    <string name="check_auth_false">Could not verify authentication! Try to reset.</string>
    <string name="current_week_anaylsis_header">Analysis Current Week</string>
    <string name="most_commits_text">Most Commits:</string>
    <string name="most_contributions_text">Most total Contributions</string>
</resources>