<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_details"
        android:name="de.lukaspanni.opensourcestats.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details">

        <action
            android:id="@+id/action_details_to_week_details"
            app:destination="@id/navigation_week_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="de.lukaspanni.opensourcestats.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_progress"
        android:name="de.lukaspanni.opensourcestats.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" />

    <fragment
        android:id="@+id/navigation_week_details"
        android:name="de.lukaspanni.opensourcestats.ui.details.TimeSpanDetails"
        tools:layout="@layout/fragment_week_details">

        <action
            android:id="@+id/action_details_to_commit_repos"
            app:destination="@id/navigation_commit_repos" />
        <action
            android:id="@+id/action_details_to_issue_repos"
            app:destination="@id/navigation_issue_repos" />
        <action
            android:id="@+id/action_details_to_pullrequest_repos"
            app:destination="@id/navigation_pullrequest_repos" />
        <action
            android:id="@+id/action_details_to_pullrequest_review_repos"
            app:destination="@id/navigation_pullrequest_review_repos" />
    </fragment>

    <fragment
        android:id="@+id/navigation_commit_repos"
        android:name="de.lukaspanni.opensourcestats.ui.details.CommitRepositoryList"
        android:label="@string/to_commit_repos_text"
        tools:layout="@layout/fragment_commit_repository_list" >
        <action
            android:id="@+id/action_commit_repos_to_repository_details"
            app:destination="@id/repository_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_issue_repos"
        android:name="de.lukaspanni.opensourcestats.ui.details.IssueRepositoryList"
        android:label="@string/to_issue_repos_text"
        tools:layout="@layout/fragment_issue_repository_list" >
        <action
            android:id="@+id/action_issue_repos_to_repository_details"
            app:destination="@id/repository_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pullrequest_repos"
        android:name="de.lukaspanni.opensourcestats.ui.details.PullRequestRepositoryList"
        android:label="@string/to_pull_request_repos_text"
        tools:layout="@layout/fragment_pull_request_repository_list" >
        <action
            android:id="@+id/action_pullrequest_repos_to_repository_details"
            app:destination="@id/repository_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_pullrequest_review_repos"
        android:name="de.lukaspanni.opensourcestats.ui.details.PullRequestReviewRepositoryList"
        android:label="@string/to_pull_request_review_repos_text"
        tools:layout="@layout/fragment_pull_request_review_repository_list" >
        <action
            android:id="@+id/action_pullrequest_review_repos_to_repository_details"
            app:destination="@id/repository_details" />
    </fragment>

    <fragment
        android:id="@+id/repository_details"
        android:name="de.lukaspanni.opensourcestats.ui.details.RepositoryDetailsFragment"
        tools:layout="@layout/fragment_repository_details" />

</navigation>