<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    android:fillViewport="true"
    tools:context="de.lukaspanni.opensourcestats.ui.progress.ProgressFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/progress_week_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/progress_weeek_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/progress_week_header"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="30sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:id="@+id/table_progress_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintTop_toBottomOf="@id/progress_weeek_header">

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/commit_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/progress_week_commits"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:gravity="end"
                            android:text="@string/not_set"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/issue_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/progress_week_issues"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:gravity="end"
                            android:text="@string/not_set"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/pull_request_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/progress_week_pull_requests"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:gravity="end"
                            android:text="@string/not_set"
                            android:textSize="20sp" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:text="@string/pull_request_review_text"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/progress_week_pull_request_reviews"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="8dp"
                            android:gravity="end"
                            android:text="@string/not_set"
                            android:textSize="20sp" />
                    </TableRow>

                </TableLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>