<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/current_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/overview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/not_set"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                app:layout_constraintTop_toTopOf="parent" />

            <TableLayout
                android:id="@+id/overview_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:stretchColumns="*"
                app:layout_constraintTop_toBottomOf="@id/overview_title">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/commit_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/commit_count"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="start"
                        android:text="@string/not_set"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/issue_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/issue_count"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="start"
                        android:text="@string/not_set"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/pull_request_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pull_request_count"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="start"
                        android:text="@string/not_set"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/pull_request_review_text"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/pull_request_review_count"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="start"
                        android:text="@string/not_set"
                        android:textSize="20sp" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</merge>